dataset1235/2025-2/2947369575/users/3324069804/executions/1003782500_2819779400.log
== SUBMISSION (2025-08-27 22:31:53)
-- CODE: 
quantidade= int(imput("quantidade de jogos:"))
unitário= float(input("valor unitario de cada jogo:"))

total= quantidade*unitario+45
print(total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:36:03)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))

total= quantidade * unitario + 45

print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:35:40)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))

total= quantidade* unitario + 45

print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:33:31)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitário= float(input("valor unitario de cada jogo:"))

total= quantidade*unitario+45

print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:34:32)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))
frete= 45
total= quantidade*unitario+frete

print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:32:17)
-- CODE: 
quantidade= int(imput("quantidade de jogos:"))
unitário= float(input("valor unitario de cada jogo:"))

total= quantidade*unitario+45
print(round(total, 1))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:33:29)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitário= float(input("valor unitario de cada jogo:"))

total= quantidade*unitario+45

print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:37:53)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))
frete= float(input("valor do frete:"))

total= quantidade * unitario + frete

print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:valor do frete:1642.5
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:valor do frete:240171.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:valor do frete:540.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:valor do frete:765.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:valor do frete:162.56
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:valor do frete:618.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:33:32)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitário= float(input("valor unitario de cada jogo:"))

total= quantidade*unitario+45

print(total)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= quantidade*unitario+45
                      ^^^^^^^^
NameError: name 'unitario' is not defined. Did you mean: 'unitário'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:33:42)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))

total= quantidade*unitario+45

print(total)

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:34:33)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))
frete= 45
total= quantidade*unitario+frete

print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:34:34)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))
frete= 45
total= quantidade*unitario+frete

print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:32:19)
-- CODE: 
quantidade= int(imput("quantidade de jogos:"))
unitário= float(input("valor unitario de cada jogo:"))

total= quantidade*unitario+45
print(round(total, 1))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    quantidade= int(imput("quantidade de jogos:"))
                    ^^^^^
NameError: name 'imput' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:35:39)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))

total= quantidade* unitario + 45

print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:35:44)
-- CODE: 
quantidade= int(input("quantidade de jogos:"))
unitario= float(input("valor unitario de cada jogo:"))

total= quantidade * unitario + 45

print(total)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10
159.90
43.50
---- correct output:
1642.5
---- user output:
quantidade de jogos:valor unitario de cada jogo:1644.0
-- TEST CASE 2:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:239895.0
-- TEST CASE 3:
---- input:
5
100.0
40.0
---- correct output:
540.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:545.0
-- TEST CASE 4:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:715.0
-- TEST CASE 5:
---- input:
3
50.0
12.56
---- correct output:
162.56
---- user output:
quantidade de jogos:valor unitario de cada jogo:195.0
-- TEST CASE 6:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
quantidade de jogos:valor unitario de cada jogo:585.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
